objects/Activity/fields/CarePlanID__c.field-meta.xml
<CustomField>
    <fullName>CarePlanID__c</fullName>
    <description>Care Plan Name for the Activity</description>
    <formula>HealthCloudGA__CarePlanGoal__r.HealthCloudGA__CarePlan__r.CaseNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Care Plan ID</label>
    <type>Text</type>
</CustomField>