objects/Activity/fields/GoalName__c.field-meta.xml
<CustomField>
    <fullName>GoalName__c</fullName>
    <description>This field holds the value of related goal Name</description>
    <formula>HealthCloudGA__CarePlanGoal__r.Name</formula>
    <label>Goal Name</label>
    <type>Text</type>
</CustomField>