objects/Activity/fields/LoggedInUser__c.field-meta.xml
<CustomField>
    <fullName>LoggedInUser__c</fullName>
    <description>Return True if &apos;current user = Assigned to&apos;</description>
    <formula>$User.Id =  Owner:User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Logged in user</label>
    <type>Checkbox</type>
</CustomField>